--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     </header>
 
     <nav class="nav1" >
-        <div class="div"><a class="di" href="">Home</a></div>
-        <div class="div"><a class="di" href="">About</a></div>
-        <div class="div"><a class="di" href="">Projects</a></div>
-        <div class="div"><a class="di" href="">Contact</a></div>
+        <a class="a1" href="">Home</a>
+        <a class="a1" href="">About</a>
+        <a class="a1" href="">Projects</a>
+        <a class="a1" href="">Contact</a>
       </nav>
      
       <nav>
@@ -55,6 +55,15 @@
            <a href="">
             <img src="https://cdn.pixabay.com/photo/2019/05/30/01/11/nectaroscordum-4238915_1280.jpg" alt="">
            </a>
+           <a href="">
+            <img src="https://cdn.pixabay.com/photo/2019/06/16/18/08/lilac-4278451_1280.jpg" alt="">
+           </a>
+           <a href="">
+            <img src="https://cdn.pixabay.com/photo/2017/09/28/22/17/spring-2797275_1280.jpg " alt="">
+           </a>
+           <a href="">
+            <img src=" https://cdn.pixabay.com/photo/2023/11/13/00/47/cactus-8384331_960_720.jpg " alt="">
+           </a>
         </div>
       </nav>
 
@@ -71,12 +80,12 @@
     </main>
 
     <footer>
-        <h2>Send Me</h2>
+        <h2 class="msg ">Send Message</h2>
         <form action="">
             <input type="text" name="user" id="in1" placeholder="Usename"> <br>
             <input type="text" name="email" id="in2" placeholder="Email">
             <br>
-            <input type="text" name="mail" id="in3" placeholder="Your message">
+            <input type="text" name="messsge" id="in3" placeholder="Your message">
         </form>
         <button>SEND</button>
     </footer>
