--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
         <button>SEND</button>
 
         <section class="slack">
-        <a class="a2" href=""> Top </a>
+        <a class="a2" href=""> Top 
+          <i class="fa-solid fa-up-long"></i>
+        </a>
       </section>
     </footer>
   </body>
